# Sistema-de-Monitoramento-Cardiaco

./: Cargo.toml  cardiac_log.csv  ecg_input.csv
src/: gui.rs  lib.rs  main.rs
src/kernel/: mod.rs  scheduler.rs  task.rs
src/simulation/: heart_data.rs  interrupts.rs  mod.rs
src/tasks/: alarm.rs  logger.rs  mod.rs  sensor.rs
src/utils/: timing.rs
