[package]
name = "sistema-monitor-cardiaco"
version = "0.1.0"
edition = "2024"
authors = ["Rafael Lopes Cordeiro <rafaelcordeiro131@gmail.com>"]
description = "Sistema de Monitoramento Cardíaco em Tempo Real"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rand = "0.8.5"
chrono = "0.4.34"
futures = "0.3.30"
crossbeam = "0.8.4"
clap = { version = "4.4.18", features = ["derive"] }
plotters = "0.3.5"     # Para gráficos de análise
csv = "1.3.0"          # Para exportar logs
log = "0.4.20"
env_logger = "0.11.1"
