[package]
name = "sistema-monitor-cardiaco"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Lopes Cordeiro <rafaelcordeiro131@gmail.com>"]
description = "Sistema de Monitoramento Cardíaco em Tempo Real"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_distr = "0.4.3"
chrono = "0.4"
futures = "0.3.30"
crossbeam = "0.8.4"
clap = { version = "4.4.18", features = ["derive"] }
plotters = "0.3.5"
csv = "1.1"
log = "0.4"
env_logger = "0.11"